fetch fonts from google / try to solve font issue on mobile

--- a/assets/css/migration-as-movement.css
+++ b/assets/css/migration-as-movement.css
@@ -1,75 +1,4 @@
-@font-face {
-	font-family: 'Lora';
-	src: url('../font/Lora-VF.woff2') format('woff2-variations'),
-	url('../font/Lora-Regular.woff2') format('woff2'),
-	url('../font/lora-v23-latin-regular.woff') format('woff'),
-	url('../font/lora-v23-latin-regular.ttf') format('truetype');
-  font-weight: 500;
-	line-height: 180%;
-}
-/*
-
-@font-face {
-	font-family: 'Lora';
-	src:
-url('../font/Lora-VF.woff2') format('woff2-variations'),
-	url('../font/Lora-Regular.woff2') format('woff2'),
-	url('../font/lora-v23-latin-regular.woff') format('woff'),
-	url('../font/lora-v23-latin-regular.ttf') format('truetype');
-	font-weight: 400;
-	line-height: 180%;
-}
-/*
-
-@font-face {
-	font-family: 'Montserrat';
-	src:
-	/*
-	url('../font/Montserrat-VF.woff2') format('woff2-variations'),
-
-  	url('../font/Montserrat-Regular.woff2') format('woff2'),
-
-		url('../font/Montserrat-Regular.woff') format('woff'),
-		url('../font/Montserrat-Regular.ttf') format('truetype');
-  font-weight: 400;
-}
-*/
-
-@font-face {
-font-family: 'Montserrat';
-src:
-url('../font/Montserrat-Regular.woff2') format('woff2'),
-url('../font/Montserrat-Regular.woff') format('woff'),
-url('../font/Montserrat-Regular.ttf') format('truetype');
-font-weight: 100;
-}
-
-/*
-
-@font-face {
-font-family: 'Montserrat';
-src: url('../font/Montserrat-VF.woff2') format('woff2-variations'),
-url('../font/Montserrat-Regular.woff2') format('woff2'),
-url('../font/Montserrat-Regular.woff') format('woff'),
-url('../font/Montserrat-Regular.ttf') format('truetype');
-font-weight: 100;
-}
-
-*/
-
-/*
-src: url('../font/Montserrat-VF.woff2') format('woff2-variations'),
-src: url('../font/Montserrat-Regular.woff2') format('woff2'),
-src: url('../font/Montserrat-Regular.woff') format('woff'),
-src: url('../font/Montserrat-Regular.ttf') format('truetype');
-*/
-
-@font-face {
-  font-family: "Poppins";
-  src: url("../fonts/PoppinsLatin-Medium.otf");
-  font-weight: normal;
-  font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Montserrat:ital,wght@0,200;0,400;0,500;1,200;1,400;1,500&family=Poppins:wght@500&display=swap');
 
 html {
 }
@@ -93,6 +22,7 @@ video::cue{
 	font-family:"Montserrat";
 	font-variant-caps: small-caps;
 	font-size:26px;
+	font-weight: 500;
 	margin-top: 1cm;
 	margin-bottom: 1cm;
 }
